Fix margins and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -13,39 +13,39 @@ body {
   background-color: #f2f2f2;
 }
 
-h2{
+h2 {
   text-align: center;
   font-size: 2rem;
-  margin: 0;
+  margin-top: .5rem;
 }
 
 h3 {
   padding: 0;
-  margin: 0;
+  margin: -.9rem;
   font-size: 1rem;
 }
 
-p {
+p:nth-child(2n-1) {
   font-size: .875rem;
   font-style: italic;
 }
+
 .cards {
   display: flex;
   padding: 1.5rem;
 }
 
-.cards div{
+.cards div {
   display: flex;
-  flex-grow: 1;
   flex-direction: column;
   justify-content: space-between;
-  width 25%;
+  width: 25%;
   padding: .5rem;
   border-left: 2px solid #333;
   border-right: 2px solid #333;
 }
 
-.cards p {
+.cards p{
   flex-grow: 1;
   margin: 0 0 1.5rem;
 }
@@ -62,6 +62,7 @@ img {
 
 .btn {
   display: inline-block;
+  text-decoration: none;
   font-size: 1.125rem;
   color: #fff;
   background-color: #333;
@@ -78,7 +79,7 @@ img {
   background-color: #000;
 }
 
-.one{
+.one {
   background-color: #e2e2e2;
 }
 
@@ -91,5 +92,5 @@ img {
 }
 
 .four {
-background-color: #999;
+  background-color: #999;
 }
